# BackendInnovar

./: .env_exemplo  .gitignore  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
Innovar/: admin.py  apps.py  models.py  serializers.py  views.py
Innovar/migrations/: 0001_initial.py  0002_horariosbloqueados_procedimentos.py  0002_procedimentos_imagem.py  0003_pacote_imagem.py
Innovar/models/: __init__.py  horarioblock.py  pacote.py  procedimento.py
Innovar/serializers/: __init__.py  horarioblock.py  pacote.py  procedimento.py
Innovar/views/: __init__.py  horarioblock.py  pacote.py  procedimento.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
